adding img files

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -270,7 +270,7 @@
             <h4>Weather App</h4>
             <div class="two-but">
                 
-                <a href="http://206.81.14.186" target="_blank">View Project</a>
+                <a href="https://weatherintheworld.com" target="_blank">View Project</a>
                 <a href="https://github.com/evargas1/Fun-Weather-App" target="_blank">Code</a>
 
 
