adding img files

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -293,7 +293,7 @@
             <h4>Finematter Shop</h4>
             <div class="two-but">
                 
-                <a href="http://143.198.174.217" target="_blank">View Project</a>
+                <a href="https://finemattershop.com" target="_blank">View Project</a>
                 <a href="https://github.com/evargas1/Shopping-Finematter" target="_blank">Code</a>
 
 
