adding the new links

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -250,7 +250,7 @@
             <div class="two-but">
                 
                 <a href="http://roxyeattoheal.com" target="_blank">View Project</a>
-                <a href="https://github.com/evargas1/Eat-to-Heal" target="_blank">Code</a>
+                <a href="https://github.com/evargas1/Roxy" target="_blank">Code</a>
 
 
             </div>
@@ -271,7 +271,7 @@
             <div class="two-but">
                 
                 <a href="https://weatherintheworld.com" target="_blank">View Project</a>
-                <a href="https://github.com/evargas1/Fun-Weather-App" target="_blank">Code</a>
+                <a href="https://github.com/evargas1/WeatherApp" target="_blank">Code</a>
 
 
             </div>
@@ -294,7 +294,7 @@
             <div class="two-but">
                 
                 <a href="https://finemattershop.com" target="_blank">View Project</a>
-                <a href="https://github.com/evargas1/Shopping-Finematter" target="_blank">Code</a>
+                <a href="https://github.com/evargas1/finematterShop" target="_blank">Code</a>
 
 
             </div>
